Remove usages of Apache Commons